[package]
name = "lstm_iter_sample"
version = "0.1.0"
authors = ["Makoto Kato <m_kato@ga2.so-net.ne.jp>"]
edition = "2018"

[dependencies]
icu_segmenter_lstm = { git = "https://github.com/unicode-org/icu4x", rev = "fdd3a0b4773388f2df8cdc3c6cb5bf4230ac79cf" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.0"
